// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`作曲エンジンの音イベントは意図なく変わらない > 2ステップ16小節 / シャッフル16分 1`] = `
{
  "beats": 72,
  "bpm": 132,
  "loopStartBeat": 8,
  "sections": [
    {
      "endBeat": 8,
      "parts": {
        "bass": "dbb547ff",
        "chords": "053633b5",
        "counter": "811c9dc5",
        "drums": "811c9dc5",
        "melody": "51f3e12f",
        "ostinato": "811c9dc5",
      },
      "section": "intro",
      "startBeat": 0,
    },
    {
      "endBeat": 40,
      "parts": {
        "bass": "bf9bdc49",
        "chords": "7d71c1ad",
        "counter": "811c9dc5",
        "drums": "d059e874",
        "melody": "77b286df",
        "ostinato": "811c9dc5",
      },
      "section": "A",
      "startBeat": 8,
    },
    {
      "endBeat": 72,
      "parts": {
        "bass": "336fbbd1",
        "chords": "afeb67ce",
        "counter": "956b2029",
        "drums": "922fd531",
        "melody": "5b966cd5",
        "ostinato": "811c9dc5",
      },
      "section": "B",
      "startBeat": 40,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > BB風8小節 / 短調 / rock 1`] = `
{
  "beats": 32,
  "bpm": 150,
  "loopStartBeat": 0,
  "sections": [
    {
      "endBeat": 32,
      "parts": {
        "bass": "f0791f1d",
        "chords": "d318484c",
        "counter": "811c9dc5",
        "drums": "05bf6dee",
        "melody": "f24c80eb",
        "ostinato": "811c9dc5",
      },
      "section": "A",
      "startBeat": 0,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > BIG風40小節 / current 1`] = `
{
  "beats": 168,
  "bpm": 150,
  "loopStartBeat": 8,
  "sections": [
    {
      "endBeat": 8,
      "parts": {
        "bass": "2e3e7aea",
        "chords": "c74e23da",
        "counter": "811c9dc5",
        "drums": "32330b85",
        "melody": "0bd21120",
        "ostinato": "811c9dc5",
      },
      "section": "intro",
      "startBeat": 0,
    },
    {
      "endBeat": 40,
      "parts": {
        "bass": "f889186e",
        "chords": "67925fb8",
        "counter": "811c9dc5",
        "drums": "263af625",
        "melody": "0d2ad6ac",
        "ostinato": "811c9dc5",
      },
      "section": "A",
      "startBeat": 8,
    },
    {
      "endBeat": 72,
      "parts": {
        "bass": "e164e0b6",
        "chords": "15fb5dbd",
        "counter": "811c9dc5",
        "drums": "9ee3d995",
        "melody": "215804bb",
        "ostinato": "811c9dc5",
      },
      "section": "B",
      "startBeat": 40,
    },
    {
      "endBeat": 104,
      "parts": {
        "bass": "afc1f65b",
        "chords": "2abb089d",
        "counter": "811c9dc5",
        "drums": "43dcef05",
        "melody": "2e8f5661",
        "ostinato": "811c9dc5",
      },
      "section": "C",
      "startBeat": 72,
    },
    {
      "endBeat": 136,
      "parts": {
        "bass": "4b86a827",
        "chords": "b642ca26",
        "counter": "811c9dc5",
        "drums": "0bb0808e",
        "melody": "1ffa75c1",
        "ostinato": "811c9dc5",
      },
      "section": "D",
      "startBeat": 104,
    },
    {
      "endBeat": 168,
      "parts": {
        "bass": "5866e87b",
        "chords": "ba47f0ae",
        "counter": "811c9dc5",
        "drums": "d1900546",
        "melody": "91b79e28",
        "ostinato": "c2c63205",
      },
      "section": "E",
      "startBeat": 136,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > BIG風40小節 / memoryArc 1`] = `
{
  "beats": 168,
  "bpm": 150,
  "loopStartBeat": 8,
  "sections": [
    {
      "endBeat": 8,
      "parts": {
        "bass": "2e3e7aea",
        "chords": "c74e23da",
        "counter": "811c9dc5",
        "drums": "32330b85",
        "melody": "0bd21120",
        "ostinato": "811c9dc5",
      },
      "section": "intro",
      "startBeat": 0,
    },
    {
      "endBeat": 40,
      "parts": {
        "bass": "f889186e",
        "chords": "67925fb8",
        "counter": "811c9dc5",
        "drums": "263af625",
        "melody": "0d2ad6ac",
        "ostinato": "811c9dc5",
      },
      "section": "A",
      "startBeat": 8,
    },
    {
      "endBeat": 72,
      "parts": {
        "bass": "e164e0b6",
        "chords": "15fb5dbd",
        "counter": "811c9dc5",
        "drums": "9ee3d995",
        "melody": "77ce7688",
        "ostinato": "811c9dc5",
      },
      "section": "B",
      "startBeat": 40,
    },
    {
      "endBeat": 104,
      "parts": {
        "bass": "afc1f65b",
        "chords": "2abb089d",
        "counter": "811c9dc5",
        "drums": "43dcef05",
        "melody": "2e8f5661",
        "ostinato": "811c9dc5",
      },
      "section": "C",
      "startBeat": 72,
    },
    {
      "endBeat": 136,
      "parts": {
        "bass": "4b86a827",
        "chords": "b642ca26",
        "counter": "811c9dc5",
        "drums": "0bb0808e",
        "melody": "27b8e820",
        "ostinato": "811c9dc5",
      },
      "section": "D",
      "startBeat": 104,
    },
    {
      "endBeat": 168,
      "parts": {
        "bass": "5866e87b",
        "chords": "ba47f0ae",
        "counter": "811c9dc5",
        "drums": "d1900546",
        "melody": "a6388f96",
        "ostinato": "c2c63205",
      },
      "section": "E",
      "startBeat": 136,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > BIG風40小節 / premiseArc 1`] = `
{
  "beats": 168,
  "bpm": 150,
  "loopStartBeat": 8,
  "sections": [
    {
      "endBeat": 8,
      "parts": {
        "bass": "2e3e7aea",
        "chords": "c74e23da",
        "counter": "811c9dc5",
        "drums": "079576e5",
        "melody": "0bd21120",
        "ostinato": "811c9dc5",
      },
      "section": "intro",
      "startBeat": 0,
    },
    {
      "endBeat": 40,
      "parts": {
        "bass": "f889186e",
        "chords": "67925fb8",
        "counter": "811c9dc5",
        "drums": "762ed3bf",
        "melody": "0d2ad6ac",
        "ostinato": "811c9dc5",
      },
      "section": "A",
      "startBeat": 8,
    },
    {
      "endBeat": 72,
      "parts": {
        "bass": "d794e790",
        "chords": "15fb5dbd",
        "counter": "811c9dc5",
        "drums": "1774ef5b",
        "melody": "08e15c65",
        "ostinato": "811c9dc5",
      },
      "section": "B",
      "startBeat": 40,
    },
    {
      "endBeat": 104,
      "parts": {
        "bass": "9ae2235b",
        "chords": "62c5e776",
        "counter": "811c9dc5",
        "drums": "5bf4ceca",
        "melody": "b6368734",
        "ostinato": "811c9dc5",
      },
      "section": "C",
      "startBeat": 72,
    },
    {
      "endBeat": 136,
      "parts": {
        "bass": "b57d245b",
        "chords": "67925fb8",
        "counter": "811c9dc5",
        "drums": "762ed3bf",
        "melody": "7b576ba5",
        "ostinato": "931256fb",
      },
      "section": "D",
      "startBeat": 104,
    },
    {
      "endBeat": 168,
      "parts": {
        "bass": "08567823",
        "chords": "ba47f0ae",
        "counter": "811c9dc5",
        "drums": "0610028d",
        "melody": "d43c8e4e",
        "ostinato": "811c9dc5",
      },
      "section": "E",
      "startBeat": 136,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > RB風4小節 / royal-pop / eurobeat 1`] = `
{
  "beats": 16,
  "bpm": 170,
  "loopStartBeat": 0,
  "sections": [
    {
      "endBeat": 16,
      "parts": {
        "bass": "0a5de706",
        "chords": "054a3c99",
        "counter": "da31bf7e",
        "drums": "f7af22e6",
        "melody": "3f22dde9",
        "ostinato": "811c9dc5",
      },
      "section": "A",
      "startBeat": 0,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > ゲームBGM風16小節 / engineRev現行 1`] = `
{
  "beats": 72,
  "bpm": 170,
  "loopStartBeat": 8,
  "sections": [
    {
      "endBeat": 8,
      "parts": {
        "bass": "2e3e7aea",
        "chords": "af0e1465",
        "counter": "811c9dc5",
        "drums": "811c9dc5",
        "melody": "9f2385bf",
        "ostinato": "811c9dc5",
      },
      "section": "intro",
      "startBeat": 0,
    },
    {
      "endBeat": 40,
      "parts": {
        "bass": "e23daf3a",
        "chords": "42588934",
        "counter": "811c9dc5",
        "drums": "762ed3bf",
        "melody": "1c344d84",
        "ostinato": "44fc2fd5",
      },
      "section": "A",
      "startBeat": 8,
    },
    {
      "endBeat": 72,
      "parts": {
        "bass": "c91ff5f7",
        "chords": "4cc977c2",
        "counter": "811c9dc5",
        "drums": "30e5c5f9",
        "melody": "0de5e123",
        "ostinato": "811c9dc5",
      },
      "section": "B",
      "startBeat": 40,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > ゲームBGM風16小節 / ベースライン装置on 1`] = `
{
  "beats": 72,
  "bpm": 170,
  "loopStartBeat": 8,
  "sections": [
    {
      "endBeat": 8,
      "parts": {
        "bass": "2e3e7aea",
        "chords": "af0e1465",
        "counter": "811c9dc5",
        "drums": "811c9dc5",
        "melody": "9f2385bf",
        "ostinato": "811c9dc5",
      },
      "section": "intro",
      "startBeat": 0,
    },
    {
      "endBeat": 40,
      "parts": {
        "bass": "005a3f03",
        "chords": "42588934",
        "counter": "811c9dc5",
        "drums": "762ed3bf",
        "melody": "1c344d84",
        "ostinato": "44fc2fd5",
      },
      "section": "A",
      "startBeat": 8,
    },
    {
      "endBeat": 72,
      "parts": {
        "bass": "0ce8954b",
        "chords": "4cc977c2",
        "counter": "811c9dc5",
        "drums": "30e5c5f9",
        "melody": "0de5e123",
        "ostinato": "811c9dc5",
      },
      "section": "B",
      "startBeat": 40,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > ゲームBGM風16小節 / 和風五音 / バウンス 1`] = `
{
  "beats": 72,
  "bpm": 160,
  "loopStartBeat": 8,
  "sections": [
    {
      "endBeat": 8,
      "parts": {
        "bass": "4e7b4787",
        "chords": "050ce258",
        "counter": "811c9dc5",
        "drums": "079576e5",
        "melody": "d4bb47e8",
        "ostinato": "811c9dc5",
      },
      "section": "intro",
      "startBeat": 0,
    },
    {
      "endBeat": 40,
      "parts": {
        "bass": "c587a6ea",
        "chords": "427977cd",
        "counter": "811c9dc5",
        "drums": "1466a2e5",
        "melody": "15d19126",
        "ostinato": "dca664b9",
      },
      "section": "A",
      "startBeat": 8,
    },
    {
      "endBeat": 72,
      "parts": {
        "bass": "3fd3dc72",
        "chords": "323eb6a2",
        "counter": "811c9dc5",
        "drums": "612cee31",
        "melody": "7be72506",
        "ostinato": "811c9dc5",
      },
      "section": "B",
      "startBeat": 40,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > ゲームBGM風16小節 / 連符レイヤーauto 1`] = `
{
  "beats": 72,
  "bpm": 170,
  "loopStartBeat": 8,
  "sections": [
    {
      "endBeat": 8,
      "parts": {
        "bass": "2e3e7aea",
        "chords": "af0e1465",
        "counter": "811c9dc5",
        "drums": "811c9dc5",
        "melody": "9f2385bf",
        "ostinato": "811c9dc5",
      },
      "section": "intro",
      "startBeat": 0,
    },
    {
      "endBeat": 40,
      "parts": {
        "bass": "e23daf3a",
        "chords": "42588934",
        "counter": "811c9dc5",
        "drums": "762ed3bf",
        "melody": "1c344d84",
        "ostinato": "edba348a",
      },
      "section": "A",
      "startBeat": 8,
    },
    {
      "endBeat": 72,
      "parts": {
        "bass": "c91ff5f7",
        "chords": "4cc977c2",
        "counter": "811c9dc5",
        "drums": "30e5c5f9",
        "melody": "0de5e123",
        "ostinato": "811c9dc5",
      },
      "section": "B",
      "startBeat": 40,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > ドラムンベース16小節 / 2小節ブレイク骨格 1`] = `
{
  "beats": 72,
  "bpm": 174,
  "loopStartBeat": 8,
  "sections": [
    {
      "endBeat": 8,
      "parts": {
        "bass": "edaa127b",
        "chords": "b93e7a62",
        "counter": "811c9dc5",
        "drums": "811c9dc5",
        "melody": "e57592a2",
        "ostinato": "811c9dc5",
      },
      "section": "intro",
      "startBeat": 0,
    },
    {
      "endBeat": 40,
      "parts": {
        "bass": "5034b117",
        "chords": "0cfae0f9",
        "counter": "811c9dc5",
        "drums": "b3eba3f7",
        "melody": "f92b3c75",
        "ostinato": "811c9dc5",
      },
      "section": "A",
      "startBeat": 8,
    },
    {
      "endBeat": 72,
      "parts": {
        "bass": "435c4f60",
        "chords": "63a3562d",
        "counter": "e0bf6813",
        "drums": "0f8d676e",
        "melody": "95f04764",
        "ostinato": "811c9dc5",
      },
      "section": "B",
      "startBeat": 40,
    },
  ],
}
`;

exports[`作曲エンジンの音イベントは意図なく変わらない > 韓国MMO風16小節 / vi軌道 / lush+rich 1`] = `
{
  "beats": 72,
  "bpm": 100,
  "loopStartBeat": 8,
  "sections": [
    {
      "endBeat": 8,
      "parts": {
        "bass": "5ddc25bf",
        "chords": "46cda944",
        "counter": "811c9dc5",
        "drums": "811c9dc5",
        "duet": "811c9dc5",
        "melody": "8bdcafe6",
        "ostinato": "811c9dc5",
      },
      "section": "intro",
      "startBeat": 0,
    },
    {
      "endBeat": 40,
      "parts": {
        "bass": "33b400a2",
        "chords": "2f5ae6f9",
        "counter": "84afaac0",
        "drums": "290317bc",
        "duet": "8329ef00",
        "melody": "af5d6775",
        "ostinato": "811c9dc5",
      },
      "section": "A",
      "startBeat": 8,
    },
    {
      "endBeat": 72,
      "parts": {
        "bass": "902dffbe",
        "chords": "73ecf092",
        "counter": "811c9dc5",
        "drums": "30e5c5f9",
        "duet": "811c9dc5",
        "melody": "34aedc1e",
        "ostinato": "811c9dc5",
      },
      "section": "B",
      "startBeat": 40,
    },
  ],
}
`;
